--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "0206f5f8-d25c-4ddd-b5e0-5374b1de5d48"
   },
   "newProjectRoot": "projects",
   "projects": {
