--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
   "private": true,
   "packageManager": "npm@10.9.4",
   "dependencies": {
+    "@angular/cdk": "^21.1.3",
     "@angular/common": "^21.1.0",
     "@angular/compiler": "^21.1.0",
     "@angular/core": "^21.1.0",
     "@angular/forms": "^21.1.0",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-angular": "^0.563.0",
     "rxjs": "~7.8.0",
+    "tailwind-merge": "^3.4.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
